# now2play-lite

./: .gitignore  CMakeLists.txt  README.md  collect_all_libs.sh  copy_network_libs.sh  deploy_libs.sh  filedialog.cpp  filedialog.h  filedialog.ui  generate_icons.py  globalproperties.h  launcher.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  masterwidget.cpp  masterwidget.h  now2play-lite.desktop.in  patchelf  rangeslider.cpp  rangeslider.h  resources.qrc  rowcolordelegate.h  scoreboard.json  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  splashwidget.cpp  splashwidget.h  splashwidget.ui  trimdialog.cpp  trimdialog.h  trimdialog.ui
SDK/header/: .gitkeep
